# signalk-multidisplay

./: Cargo.toml  LICENSE  README.md  index.html
.github/workflows/: pages.yml  publish.yml  rust.yml  rust_pi.yml
assets/: manifest.json  sw.js
datavalue_derive/: Cargo.toml
datavalue_derive/src/: lib.rs
demo/: index.html  signalk-multidisplay-91488115321d3f4b.js  signalk-multidisplay-91488115321d3f4b_bg.wasm  signalk-multidisplay-c1c93d06695698a4.js  signalk-multidisplay-c2c1ef0286f382b5.js  signalk-multidisplay-c2c1ef0286f382b5_bg.wasm  signalk-multidisplay-d02d05610da3499b.js  signalk-multidisplay-d02d05610da3499b_bg.wasm  signalk-multidisplay-f1ba82ef7e16aaf3.js
dev_scripts/: sk_rest_info.http  to_pi.bat
home_page/: index.html
src/: app.rs  communication.rs  datatypes.rs  dataunits.rs  datavalues.rs  layouts.rs  lib.rs  main.rs
