[package]
name = "signalk-multidisplay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10"
bevy_mod_reqwest = "0.10"
serde_json = "1.0.96"
signalk = "0.2"

[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3
