[package]
name = "signalk-multidisplay"
version = "0.1.1"
edition = "2021"
rust-version = "1.65"
authors = ["Anders Arnholm <anders@arnholm.se>"]
license = "ISC"
description = "A display instrument for SignalK (Sailing) data"
readme = "README.md"
homepage = "https://balp.github.io/signalk-multidisplay/"
repository = "https://github.com/balp/signalk-multidisplay"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#[lib]
#crate-type = ["cdylib", "rlib"]
exclude = [
    ".idea/*",
    ".github/*",
    "dev_scripts/*",
    "home_page/*",
]

[dependencies]
log = "0.4"
signalk = "0.3.1"
egui = "0.22"
eframe = { version = "0.22", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
serde = { version = "1", features = ["derive"] }
ewebsock = { version = "0.2", features = ["tls"] }
ehttp = "0.3"
serde_json = "1.0"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"
tokio = { version = "1.29", features = ["macros", "rt-multi-thread"] }
# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"


[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3
[profile.release]
opt-level = 2

[patch.crates-io]
# signalk = { path = "../signalk" }
