[package]
name = "signalk-multidisplay"
version = "0.3.2"
edition = "2021"
rust-version = "1.65"
authors = ["Anders Arnholm <anders@arnholm.se>"]
license = "ISC"
description = "A display instrument for SignalK (Sailing) data"
readme = "README.md"
homepage = "https://balp.github.io/signalk-multidisplay/"
repository = "https://github.com/balp/signalk-multidisplay"

[dependencies]
log = "0.4"
signalk = "0.6.0-alpha+3"
egui = "0.29"
eframe = { version = "0.29", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
serde = { version = "1", features = ["derive"] }
ewebsock = { version = "0.7", features = ["tls"] }
ehttp = "0.5"
serde_json = "1.0"
datavalue_derive = { version = "0.1.0", path = "datavalue_derive" }
web-time = "1.1"
wasm-bindgen = "0.2.93"
web-sys = "0.3.70"
wasm-bindgen-futures = "0.4.43"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread"] }
# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"


[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3
[profile.release]
opt-level = 2

[patch.crates-io]
signalk = { path = "../signalk" }
